# thunar

./: meson_options.txt
tests/: meson.build  test-screenshot-file-menu.c  test-screenshot-main.c  test-screenshot-open.c  test-snapshot-file-menu.c  test-snapshot-main.c  test-snapshot-open.c  test-snapshot-tree-view-context-menu-keyboard.c  test-snapshot-tree-view-context-menu-mouse.c  test-text-renderer.c  test-thunar-gio-extensions.c  test-thunar-gobject-extensions.c  test-thunar-gtk-extensions.c  test-thunar-util.c  test-tree-view.c  thunar-job-control.c  thunar-job-control.h  thunar-snapshot.c  thunar-snapshot.h  thunar-test-control.c  thunar-test-control.h  thunar-test-snapshots.c  thunar-test-snapshots.h  thunar-test-utils.c  thunar-test-utils.h
tests/home_env/.config/Thunar/: accels.scm
tests/home_env/.config/xfce4/xfconf/xfce-perchannel-xml/: thunar.xml
tests/themes/Mint-L-Aqua/gtk-3.0/: gtk.css
thunar/: meson.build  thunar-abstract-icon-view.c  thunar-application.c  thunar-application.h  thunar-chooser-dialog.c  thunar-details-view.c  thunar-dnd.c  thunar-dnd.h  thunar-file.c  thunar-file.h  thunar-gtk-extensions.c  thunar-gtk-extensions.h  thunar-history.c  thunar-history.h  thunar-icon-renderer.c  thunar-job.c  thunar-location-button.c  thunar-location-buttons.c  thunar-private.h  thunar-properties-dialog.c  thunar-renamer-dialog.c  thunar-shortcuts-view.c  thunar-standard-view.c  thunar-standard-view.h  thunar-statusbar.c  thunar-terminal-widget.c  thunar-test-utils.c  thunar-test-utils.h  thunar-text-renderer.c  thunar-tree-view.c  thunar-util.c  thunar-util.h  thunar-window.c
